--- a/Homework_2/Homework_2_Planets_v2.ipynb
+++ b/Homework_2/Homework_2_Planets_v2.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "np.where(condicion, output if the condition is true, condition if the condition is false)\n",
     "\n",
-    "Cuando se llama a la funcion completa con todos sus parametros, crea un nuevo array, en base al array al cual estas poniendo la condicion, que contiene la los datos del array original pero habiendole aplicado la condicion.\n",
+    "Cuando se llama a la funcion completa con todos sus parametros, crea un nuevo array, en base al array al cual estas poniendo la condicion, que contiene los datos del array original pero habiendole aplicado la condicion.\n",
     "\n",
     "Si solo se llama a la funcion solo con la condicion, el resultado sera un arrays con los indices del array que cumplen la condicion. xd La combinacion de esto es lo que hace que trabaje tan bien las funcion xd"
    ]
