--- a/AGN/Emission_Line_Galaxy_Classification.ipynb
+++ b/AGN/Emission_Line_Galaxy_Classification.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "869913ad",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "4c8b70dd",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "c4542c3e",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=10000</i>\n",
-       "<table id=\"table140140612312128\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139776731848176\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>plate</th><th>fiberid</th><th>mjd</th><th>z</th><th>zwarning</th><th>oii_3726_flux</th><th>oii_3729_flux</th><th>neiii_3869_flux</th><th>h_delta_flux</th><th>h_gamma_flux</th><th>oiii_4363_flux</th><th>h_beta_flux</th><th>oiii_4959_flux</th><th>oiii_5007_flux</th><th>oi_6300_flux</th><th>nii_6548_flux</th><th>h_alpha_flux</th><th>nii_6584_flux</th><th>oii_3726_flux_err</th><th>oii_3729_flux_err</th><th>neiii_3869_flux_err</th><th>h_delta_flux_err</th><th>h_gamma_flux_err</th><th>oiii_4363_flux_err</th><th>h_beta_flux_err</th><th>oiii_4959_flux_err</th><th>oiii_5007_flux_err</th><th>oi_6300_flux_err</th><th>nii_6548_flux_err</th><th>h_alpha_flux_err</th><th>nii_6584_flux_err</th><th>bptclass</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th></tr></thead>\n",
        "<tr><td>266</td><td>575</td><td>51630</td><td>0.08577254</td><td>0</td><td>14.66852</td><td>7.437927</td><td>3.841347</td><td>5.27385</td><td>8.785986</td><td>-3.978425</td><td>21.57409</td><td>1.900199</td><td>6.008904</td><td>5.940429</td><td>16.18854</td><td>122.9959</td><td>48.82838</td><td>5.232395</td><td>4.753706</td><td>3.404466</td><td>3.104035</td><td>2.739097</td><td>2.880512</td><td>2.560436</td><td>2.571726</td><td>2.612152</td><td>2.082382</td><td>0.7965218</td><td>2.828085</td><td>2.402491</td><td>2</td></tr>\n",
@@ -133,7 +133,7 @@
        "  633     431 52079 0.06740189 ...          15.2634          4.426786        1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "96ca2e68",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
        " 'bptclass']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "3c198529",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "f5bd1a1a",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "ee3f7fcd",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "id": "a1682849",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "id": "57687cad",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "id": "87f79cdf",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "id": "8e0ad1e7",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "id": "7c7f1974",
    "metadata": {},
    "outputs": [
@@ -633,9 +633,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a39beff",
    "metadata": {},
    "source": [
-    "There is some differences in the Data set. How obtain the same Data set?"
+    "There is some differences in the Data set. How obtain the same Data set?\n",
+    "\n",
+    "**Como se si estoy trabajando en el entorno de python i.e. kernel correcto? Si entro mediante wsl, el entorno debe incluir el termino base entre parentesis, ya que ese es el script de python que usa incluso la terminal, en este caso aparece Python 3.9.12 (base) c:**\n",
+    "\n",
+    "**Si entro normalmente i.e. sin wsl, entonces no hay tal cosa como una base i.e. Python 3.9.12 (base), pero lo que me recomienda usar y parece que funciona, ya que lo toma como base es python 3.10.4 . Aunque por alguna razon python 3.10.4 en wsl necesita algunas modulos como pandas, algo que si lo ejecuto sin el wsl si tiene instalado xd. Parece un problema de modulos**\n",
+    "\n",
+    "Por eso como conclusion mejor:\n",
+    "\n",
+    "**WSL2: python 3.9.12 (base)**\n",
+    "\n",
+    "**Windows normal: 3.10.4**"
    ]
   },
   {
