Hmwrk3 just 3 remain questions

--- a/AGN/SDSS_data.ipynb
+++ b/AGN/SDSS_data.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "4f8580f5",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "3b753d88",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "613ebc3a",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=5000</i>\n",
-       "<table id=\"table140230705661984\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140029406773200\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>objId</th><th>ra</th><th>dec</th><th>petror90_r</th><th>g</th><th>r</th><th>err_g</th><th>err_r</th><th>petroMag_g</th><th>petroMag_r</th><th>petroMagErr_r</th><th>petroMagErr_g</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>1237648675604987911</td><td>241.758465781446</td><td>1.10539195830498</td><td>14.1713</td><td>15.28709</td><td>14.29342</td><td>0.00253945</td><td>0.002113927</td><td>15.44247</td><td>14.45616</td><td>0.01843804</td><td>0.02270781</td></tr>\n",
@@ -150,7 +150,7 @@
        "1237668349759258921 244.064318759365 ...   0.009389773     0.0100036"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "276f1748",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "a508770f",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        " 'petroMagErr_g']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "07a7d5f3",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "6b2c8e86",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "c8884e5e",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "b93ef7c9",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "1d2a304a",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
+   "id": "b258cd37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(gals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7b54ced6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#gals['g-r'] = gals['g']-gals['r']\n",
+    "\n",
+    "#gals\n",
+    "#print(gals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "0a0cad8f",
    "metadata": {},
    "outputs": [
@@ -489,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "5895524f",
    "metadata": {},
    "outputs": [],
@@ -505,12 +528,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#print(red)"
+    "#print(red)\n",
+    "#red"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "id": "769e4a39",
    "metadata": {},
    "outputs": [],
@@ -520,17 +544,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "e274a391",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#print(small_red)"
+    "#print(len(small_red))\n",
+    "#small_red"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "c80bddd6",
    "metadata": {},
    "outputs": [
