Hmwrk3 just 1 remain question

--- a/AGN/SDSS_data.ipynb
+++ b/AGN/SDSS_data.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4f8580f5",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3b753d88",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "613ebc3a",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=5000</i>\n",
-       "<table id=\"table140029406773200\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140129195256272\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>objId</th><th>ra</th><th>dec</th><th>petror90_r</th><th>g</th><th>r</th><th>err_g</th><th>err_r</th><th>petroMag_g</th><th>petroMag_r</th><th>petroMagErr_r</th><th>petroMagErr_g</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>1237648675604987911</td><td>241.758465781446</td><td>1.10539195830498</td><td>14.1713</td><td>15.28709</td><td>14.29342</td><td>0.00253945</td><td>0.002113927</td><td>15.44247</td><td>14.45616</td><td>0.01843804</td><td>0.02270781</td></tr>\n",
@@ -150,7 +150,7 @@
        "1237668349759258921 244.064318759365 ...   0.009389773     0.0100036"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "276f1748",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a508770f",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        " 'petroMagErr_g']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "07a7d5f3",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6b2c8e86",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c8884e5e",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b93ef7c9",
    "metadata": {},
    "outputs": [
@@ -419,6 +419,87 @@
     "#plt.xlim(0.00,13)\n",
     "plt.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7ce2f346",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><i>Table length=5000</i>\n",
+       "<table id=\"table140129195256272\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>objId</th><th>ra</th><th>dec</th><th>petror90_r</th><th>g</th><th>r</th><th>err_g</th><th>err_r</th><th>petroMag_g</th><th>petroMag_r</th><th>petroMagErr_r</th><th>petroMagErr_g</th><th>g-r</th></tr></thead>\n",
+       "<thead><tr><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
+       "<tr><td>1237648675604987911</td><td>241.758465781446</td><td>1.10539195830498</td><td>14.1713</td><td>15.28709</td><td>14.29342</td><td>0.00253945</td><td>0.002113927</td><td>15.44247</td><td>14.45616</td><td>0.01843804</td><td>0.02270781</td><td>0.9863099999999996</td></tr>\n",
+       "<tr><td>1237648704070025320</td><td>251.447335294731</td><td>-0.235449567118369</td><td>20.22132</td><td>16.02892</td><td>14.94807</td><td>0.004190572</td><td>0.002790975</td><td>16.13263</td><td>15.07888</td><td>0.009884841</td><td>0.01208971</td><td>1.053749999999999</td></tr>\n",
+       "<tr><td>1237648704070156627</td><td>251.841189048486</td><td>-0.202854609544485</td><td>16.69693</td><td>15.20077</td><td>13.84778</td><td>0.008436901</td><td>0.004110175</td><td>14.36238</td><td>13.02569</td><td>0.05124776</td><td>0.1300085</td><td>1.336689999999999</td></tr>\n",
+       "<tr><td>1237651249919099466</td><td>265.38347213949</td><td>17.3891358022255</td><td>13.04439</td><td>15.75299</td><td>15.14318</td><td>0.003802914</td><td>0.003863613</td><td>15.32181</td><td>14.32245</td><td>0.6160502</td><td>0.461555</td><td>0.9993599999999994</td></tr>\n",
+       "<tr><td>1237651250454070173</td><td>263.793796626998</td><td>21.4834493949729</td><td>11.53161</td><td>16.88238</td><td>16.58331</td><td>0.004948931</td><td>0.005338616</td><td>16.90803</td><td>16.59394</td><td>0.02227232</td><td>0.01312742</td><td>0.3140900000000002</td></tr>\n",
+       "<tr><td>1237651250457543653</td><td>267.62053642145</td><td>14.3943813942417</td><td>15.38324</td><td>14.58169</td><td>13.72256</td><td>0.002374631</td><td>0.002340077</td><td>14.54344</td><td>13.68518</td><td>0.01193452</td><td>0.01098615</td><td>0.8582599999999996</td></tr>\n",
+       "<tr><td>1237651250993234765</td><td>266.702792117165</td><td>16.9690122570821</td><td>12.25322</td><td>16.49914</td><td>16.01818</td><td>0.008930697</td><td>0.008716553</td><td>12.65001</td><td>14.05173</td><td>0.4345905</td><td>0.004334079</td><td>-1.4017199999999992</td></tr>\n",
+       "<tr><td>1237651252061536549</td><td>261.409293201519</td><td>28.4238082557385</td><td>10.52122</td><td>9.452971</td><td>8.262579</td><td>0.000349405</td><td>0.0003797987</td><td>9.397386</td><td>8.252803</td><td>0.0001733484</td><td>0.0001852973</td><td>1.144582999999999</td></tr>\n",
+       "<tr><td>1237651252063764605</td><td>264.014430873188</td><td>23.9997600109154</td><td>16.04928</td><td>16.66008</td><td>15.73234</td><td>0.0234215</td><td>0.004817179</td><td>16.59203</td><td>15.75701</td><td>0.9191263</td><td>1.269255</td><td>0.8350200000000019</td></tr>\n",
+       "<tr><td>1237651252064026887</td><td>264.301318805072</td><td>23.4247090557181</td><td>10.73677</td><td>8.834757</td><td>7.767103</td><td>7.709669e-05</td><td>9.073011e-05</td><td>8.757869</td><td>7.742634</td><td>0.0001296594</td><td>0.0001285155</td><td>1.0152349999999997</td></tr>\n",
+       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
+       "<tr><td>1237666302117543979</td><td>299.083294894987</td><td>1.05460365487573</td><td>31.2111</td><td>15.58464</td><td>14.97626</td><td>0.00362269</td><td>0.003757148</td><td>15.31939</td><td>14.20929</td><td>0.4762215</td><td>1.11975</td><td>1.110100000000001</td></tr>\n",
+       "<tr><td>1237667782326354014</td><td>251.593791764546</td><td>9.03780330580253</td><td>17.43321</td><td>14.37745</td><td>13.71586</td><td>0.001950626</td><td>0.001866048</td><td>14.44827</td><td>13.77842</td><td>0.007753128</td><td>0.005755365</td><td>0.6698500000000003</td></tr>\n",
+       "<tr><td>1237667783937426051</td><td>253.127589078729</td><td>9.78383795588419</td><td>10.77994</td><td>15.74024</td><td>14.92414</td><td>0.003142626</td><td>0.00245334</td><td>15.54429</td><td>14.88992</td><td>0.01847737</td><td>0.01797126</td><td>0.6543700000000001</td></tr>\n",
+       "<tr><td>1237668271378333856</td><td>241.245006449066</td><td>10.9482594765235</td><td>10.16097</td><td>8.796344</td><td>8.320475</td><td>0.0003091821</td><td>0.0002427774</td><td>8.766651</td><td>8.291597</td><td>0.0004176946</td><td>0.0005875526</td><td>0.4750540000000001</td></tr>\n",
+       "<tr><td>1237668310554968131</td><td>238.26068618418</td><td>12.0053635953988</td><td>12.58089</td><td>15.10527</td><td>14.39387</td><td>0.002450216</td><td>0.002210508</td><td>15.16408</td><td>14.50987</td><td>0.006756203</td><td>0.006797385</td><td>0.6542100000000008</td></tr>\n",
+       "<tr><td>1237668311630544944</td><td>242.569174188081</td><td>11.6604212901079</td><td>11.16251</td><td>16.68292</td><td>16.01315</td><td>0.007209385</td><td>0.00567402</td><td>17.06433</td><td>16.4879</td><td>0.5663393</td><td>0.9140746</td><td>0.576430000000002</td></tr>\n",
+       "<tr><td>1237668312170430539</td><td>249.382891682158</td><td>9.88218894581706</td><td>13.00584</td><td>16.55145</td><td>15.8137</td><td>0.004245561</td><td>0.003529909</td><td>16.61847</td><td>15.86909</td><td>0.03286098</td><td>0.03195612</td><td>0.7493799999999986</td></tr>\n",
+       "<tr><td>1237668332036096049</td><td>238.811353259547</td><td>10.5213185210791</td><td>10.88151</td><td>15.06373</td><td>14.4325</td><td>0.002422886</td><td>0.002248484</td><td>15.11865</td><td>14.58095</td><td>0.002588228</td><td>0.002757631</td><td>0.537700000000001</td></tr>\n",
+       "<tr><td>1237668336862757238</td><td>245.507999630673</td><td>13.0938447851562</td><td>11.05837</td><td>16.7016</td><td>15.7911</td><td>0.005274446</td><td>0.004632927</td><td>16.63531</td><td>15.77637</td><td>0.01053589</td><td>0.01928549</td><td>0.8589400000000005</td></tr>\n",
+       "<tr><td>1237668349759258921</td><td>244.064318759365</td><td>9.3052317240423</td><td>12.75182</td><td>15.30962</td><td>14.58074</td><td>0.002463837</td><td>0.002205362</td><td>15.32686</td><td>14.66964</td><td>0.009389773</td><td>0.0100036</td><td>0.6572200000000006</td></tr>\n",
+       "</table></div>"
+      ],
+      "text/plain": [
+       "<Table length=5000>\n",
+       "       objId               ra        ... petroMagErr_g         g-r        \n",
+       "       int64            float64      ...    float64          float64      \n",
+       "------------------- ---------------- ... ------------- -------------------\n",
+       "1237648675604987911 241.758465781446 ...    0.02270781  0.9863099999999996\n",
+       "1237648704070025320 251.447335294731 ...    0.01208971   1.053749999999999\n",
+       "1237648704070156627 251.841189048486 ...     0.1300085   1.336689999999999\n",
+       "1237651249919099466  265.38347213949 ...      0.461555  0.9993599999999994\n",
+       "1237651250454070173 263.793796626998 ...    0.01312742  0.3140900000000002\n",
+       "1237651250457543653  267.62053642145 ...    0.01098615  0.8582599999999996\n",
+       "1237651250993234765 266.702792117165 ...   0.004334079 -1.4017199999999992\n",
+       "1237651252061536549 261.409293201519 ...  0.0001852973   1.144582999999999\n",
+       "1237651252063764605 264.014430873188 ...      1.269255  0.8350200000000019\n",
+       "1237651252064026887 264.301318805072 ...  0.0001285155  1.0152349999999997\n",
+       "                ...              ... ...           ...                 ...\n",
+       "1237666302117543979 299.083294894987 ...       1.11975   1.110100000000001\n",
+       "1237667782326354014 251.593791764546 ...   0.005755365  0.6698500000000003\n",
+       "1237667783937426051 253.127589078729 ...    0.01797126  0.6543700000000001\n",
+       "1237668271378333856 241.245006449066 ...  0.0005875526  0.4750540000000001\n",
+       "1237668310554968131  238.26068618418 ...   0.006797385  0.6542100000000008\n",
+       "1237668311630544944 242.569174188081 ...     0.9140746   0.576430000000002\n",
+       "1237668312170430539 249.382891682158 ...    0.03195612  0.7493799999999986\n",
+       "1237668332036096049 238.811353259547 ...   0.002757631   0.537700000000001\n",
+       "1237668336862757238 245.507999630673 ...    0.01928549  0.8589400000000005\n",
+       "1237668349759258921 244.064318759365 ...     0.0100036  0.6572200000000006"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c03559a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
